fix: 자바 1.8로 변경